<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:padding="30dp"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <TextView
            android:id="@+id/txtNumber1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/txtNumber1"
            />

        <EditText
            android:id="@+id/editNumber1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:ems="5"/>

        <TextView
            android:id="@+id/txtNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/txtNumber2"
            />

        <EditText
            android:id="@+id/editNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:ems="5"/>

        <TextView
            android:id="@+id/txtOperation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/txtOperation"
            />

        <RadioGroup
            android:id="@+id/rgOperation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <RadioButton
                android:id="@+id/rbAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbAdd"/>

            <RadioButton
                android:id="@+id/rbMultiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbMultiply"/>
            <RadioButton
                android:id="@+id/rbDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbDivide"/>
            <RadioButton
                android:id="@+id/rbSubstruct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbSubstract"/>

        </RadioGroup>
    </GridLayout>
    <Button
        android:id="@+id/btnShowResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="operate"
        android:layout_above="@+id/btnFinish"
        android:text="@string/btnShowResult"/>
    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="operate"
        android:layout_alignParentBottom="true"
        android:text="@string/btnFinish"/>


</RelativeLayout>